@@ -16,6 +16,7 @@ Changelog for 1.3.21
 * File->get_for_template now gets most recent parts image (Chris T)
 * Fixed error on generate purchase orders (Chris T, 3544857, h/t Nigel T)
 * Fixed internal server errors with date parsing (Chris T, 3546698)
+* Fixed "Directory Transversal Not Allowed w/fs_cssdir (Chris T, h/t Robert C)
 
 Changelog for 1.3.20
 * Fixes for es_AR translation, duplicate keys removed (Andres B)
